--- a/onmyway/WebRoot/WEB-INF/web.xml
+++ b/onmyway/WebRoot/WEB-INF/web.xml
@@ -11,6 +11,10 @@
 	<servlet>
 		<servlet-name>fxmlReq</servlet-name>
 		<servlet-class>com.bluecloud.mvc.web.BCWebServlet</servlet-class>
+		<init-param>
+			<param-name>name</param-name>
+			<param-value>submit</param-value>
+		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet-mapping>
